Correct scripts link
- Fixed production scripts being included from the old path.

--- a/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
+++ b/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
@@ -197,7 +197,7 @@
         <script src="~/js/shared/site.js"></script>
     </environment>
     <environment names="Staging,Production">
-        <script asp-append-version="true" src="~/scripts/page/bundle.min.js"></script>
+        <script asp-append-version="true" src="~/js/page/bundle.min.js"></script>
     </environment>
     @RenderSection("scripts", false)
 </body>
