Copy pastable localization example
- Made localization example copy pastable, because not everyone understands localization functions.

--- a/Mvc.Grid.Web/Views/Grid/Localization.cshtml
+++ b/Mvc.Grid.Web/Views/Grid/Localization.cshtml
@@ -43,8 +43,8 @@
 {
     services.AddMvcGrid(filters =>
     {
-        filters.BooleanFalseOptionText = () => Localize(<span class="str">"false"</span>);
-        filters.BooleanTrueOptionText = () => Localize(<span class="str">"true"</span>);
+        filters.BooleanFalseOptionText = () => <span class="str">"faux"</span>;
+        filters.BooleanTrueOptionText = () => <span class="str">"vrai"</span>;
     });
 }
 </code>
