--- a/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
+++ b/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <meta name="description" content="Grid controls for ASP.NET MVC projects.">
     <title>@ViewBag.Title</title>
 
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 
     <environment names="Development">
         <link href="~/css/bootstrap/bootstrap.css" rel="stylesheet">
