IQueryable based examples
- Made examples use IQueryable interface by default, to give people a hint about IQueryable based processing instead of memory based one with enumerables.

--- a/Mvc.Grid.Web/Views/Grid/Filtering.cshtml
+++ b/Mvc.Grid.Web/Views/Grid/Filtering.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Person>
+﻿@model IQueryable<Person>
 
 @{
     ViewBag.Title = "MVC.Grid filtering";
@@ -36,7 +36,7 @@
     <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
+@@model <span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
