--- a/Mvc.Grid.Web/Views/Grid/RowProcessing.cshtml
+++ b/Mvc.Grid.Web/Views/Grid/RowProcessing.cshtml
@@ -1,6 +1,6 @@
 ﻿@using NonFactors.Mvc.Grid.Web.Processors;
 
-@model IEnumerable<Person>
+@model IQueryable<Person>
 
 @{
     ViewBag.Title = "MVC.Grid row processing";
@@ -59,7 +59,7 @@
         <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
+@@model <span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
@@ -86,7 +86,7 @@
         <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
+@@model <span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
