--- a/Mvc.Grid.Web/Views/Grid/FilterModes.cshtml
+++ b/Mvc.Grid.Web/Views/Grid/FilterModes.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Person>
+﻿@model IQueryable<Person>
 
 @{
     ViewBag.Title = "MVC.Grid filter modes";
@@ -91,7 +91,7 @@
         <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
+@@model <span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
@@ -122,7 +122,7 @@
         <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
+@@model <span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
@@ -153,7 +153,7 @@
         <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
+@@model <span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
