--- a/Mvc.Grid.Web/Views/Grid/Paging.cshtml
+++ b/Mvc.Grid.Web/Views/Grid/Paging.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Person>
+﻿@model IQueryable<Person>
 
 @{
     ViewBag.Title = "MVC.Grid data paging";
@@ -46,6 +46,7 @@
 [<span class="cls">HttpGet</span>]
 <span class="kwd">public</span> <span class="cls">ViewResult</span> Index()
 {
+    <span class="com">// Result needs to be IQueryable in database scenarios, to make use of database side paging.</span>
     <span class="kwd">return</span> View(Context.Set&lt;<span class="cls">Person</span>&gt;());
 }
 </code>
@@ -60,7 +61,7 @@
         <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
+@@model <span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
