--- a/Mvc.Grid.Web/Views/Grid/Partial.cshtml
+++ b/Mvc.Grid.Web/Views/Grid/Partial.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Person>
+﻿@model IQueryable<Person>
 
 @{
     ViewBag.Title = "MVC.Grid custom partial";
@@ -34,7 +34,7 @@
     <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
+@@model <span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(<span class="str">"_NestedPersonGrid"</span>, Model)
