--- a/Mvc.Grid.Web/Views/Grid/SourceUrl.cshtml
+++ b/Mvc.Grid.Web/Views/Grid/SourceUrl.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Person>
+﻿@model IQueryable<Person>
 
 @{
     ViewBag.Title = "MVC.Grid switching to ajax grid";
@@ -44,7 +44,7 @@
             <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
+@@model <span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html.Partial(<span class="str">"_IndexGrid"</span>))
 </code>
@@ -61,7 +61,7 @@
         <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
+@@model <span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
