--- a/Mvc.Grid.Web/Views/Javascript/ReloadEvents.cshtml
+++ b/Mvc.Grid.Web/Views/Javascript/ReloadEvents.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Person>
+﻿@model IQueryable<Person>
 
 @{
     ViewBag.Title = "MVC.Grid reload events binding";
@@ -40,7 +40,7 @@
             <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
+@@model <span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt;
 
 <span class="com">@@* Should only include grid declaration *@@</span>
 
