--- a/Mvc.Grid.Web/Views/Pager/PagesToDisplay.cshtml
+++ b/Mvc.Grid.Web/Views/Pager/PagesToDisplay.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Person>
+﻿@model IQueryable<Person>
 
 @{
     ViewBag.Title = "MVC.Grid pager pages to display";
@@ -70,7 +70,7 @@
         <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
+@@model <span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
@@ -102,7 +102,7 @@
         <div class="widget-content">
 <pre>
 <code>
-@@model <span class="cls">IEnumerable</span>&lt;<span class="cls">Person</span>&gt;
+@@model <span class="cls">IQueryable</span>&lt;<span class="cls">Person</span>&gt;
 
 @@(Html
     .Grid(Model)
