Github repo rename
- Renamed github repo to reduce confusion with beta mvc versions.

--- a/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
+++ b/Mvc.Grid.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
     <div class="row">
         <div class="sidebar col-lg-2">
             <div class="logo">
-                <a href="https://github.com/NonFactors/MVC6.Grid">
+                <a href="https://github.com/NonFactors/AspNetCore.Grid">
                     <span class="fa fa-github">
                         <span class="version">v@(typeof(IGrid).Assembly.GetName().Version)</span>
                     </span>
