--- a/Mvc.Grid.Web/Views/Shared/MvcGrid/_Pager.cshtml
+++ b/Mvc.Grid.Web/Views/Shared/MvcGrid/_Pager.cshtml
@@ -6,7 +6,7 @@
     Int32 firstDisplayPage = Model.FirstDisplayPage;
 }
 
-    <div class="@($"mvc-grid-pager {Model.CssClasses}".Trim())" data-show-page-sizes="@Model.ShowPageSizes">
+    <div class="@($"mvc-grid-pager {Model.CssClasses}".Trim())" data-show-page-sizes="@Model.ShowPageSizes" data-total-rows="@Model.TotalRows">
     @if (totalPages > 0)
     {
         if (currentPage > 1)
