--- a/Mvc.Grid.Web/Views/Home/Preferences.cshtml
+++ b/Mvc.Grid.Web/Views/Home/Preferences.cshtml
@@ -30,6 +30,7 @@
             {
                 pager.RowsPerPage = 4;
             })
+            .Named("preferences")
             .Filterable()
             .Sortable()
         )
@@ -61,7 +62,8 @@
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
     .Empty(<span class="str">"No data found"</span>)
-    .Configure(...) <span class="com">// Load configuration from cookie/backend/etc.</span>
+    .Named(<span class="str">"preferences"</span>)
+    .Configure(...) <span class="com">// Load configuration from backend, otherwise use client side function.</span>
     .Filterable()
     .Sortable()
     .Pageable()
@@ -97,14 +99,25 @@
             <div class="widget-content">
 <pre>
 <code>
+<span class="kwd">const</span> configuration = localStorage.getItem(<span class="str">"grid-config"</span>);
+<span class="kwd">const</span> grid = <span class="kwd">new</span> <span class="cls">MvcGrid</span>(document.querySelector(<span class="str">".mvc-grid"</span>));
+
+<span class="kwd">if</span> (configuration) {
+    <span class="com">// Client side configuration function</span>
+    grid.configure(JSON.parse(configuration));
+}
+
 document.getElementById(<span class="str">"GridConfigure"</span>).addEventListener(<span class="str">"click"</span>, <span class="kwd">function</span> () {
     <span class="kwd">new</span> <span class="cls">MvcGrid</span>(document.querySelector(<span class="str">".mvc-grid"</span>)).showConfiguration(<span class="kwd">this</span>);
 });
 
 document.addEventListener(<span class="str">"gridconfigure"</span>, e => {
-    <span class="kwd">const</span> configuration = e.detail.grid.getConfiguration();
+    <span class="kwd">const</span> grid = e.detail.grid;
+    <span class="kwd">const</span> configuration = grid.getConfiguration();
 
-    <span class="com">// Save configuration to a cookie/backend/etc.</span>
+    <span class="com">// Save configuration to a cookie/local storage/backend/etc.</span>
+    <span class="com">// Every configuration should have a unique name for every grid, preferrably grid name.</span>
+    localStorage.setItem(<span class="str">"grid-"</span> + grid.name, <span class="cls">JSON</span>.stringify(configuration));
 });
 </code>
 </pre>
@@ -116,8 +129,19 @@ document.addEventListener(<span class="str">"gridconfigure"</span>, e => {
 
 @section scripts {
     <script>
+        const configuration = localStorage.getItem("grid-config");
+        const grid = new MvcGrid(document.querySelector(".mvc-grid"));
+
+        if (configuration) {
+            grid.configure(JSON.parse(configuration));
+        }
+
         document.getElementById("GridConfigure").addEventListener("click", function () {
-            new MvcGrid(document.querySelector(".mvc-grid")).showConfiguration(this);
+            grid.showConfiguration(this);
+        });
+
+        document.addEventListener("gridconfigure", function (e) {
+            localStorage.setItem("grid-config", JSON.stringify(e.detail.grid.getConfiguration()));
         });
     </script>
 }
