--- a/Mvc.Grid.Web/Views/Shared/MvcGrid/_Pager.cshtml
+++ b/Mvc.Grid.Web/Views/Shared/MvcGrid/_Pager.cshtml
@@ -16,8 +16,8 @@
         }
         else
         {
-        <button type="button" class="disabled" tabindex="-1">&#171;</button>
-        <button type="button" class="disabled" tabindex="-1">&#8249;</button>
+        <button type="button" disabled>&#171;</button>
+        <button type="button" disabled>&#8249;</button>
         }
         for (Int32 page = firstDisplayPage; page <= totalPages && page < firstDisplayPage + Model.PagesToDisplay; page++)
         {
@@ -37,8 +37,8 @@
         }
         else
         {
-        <button type="button" class="disabled" tabindex="-1">&#8250;</button>
-        <button type="button" class="disabled" tabindex="-1">&#187;</button>
+        <button type="button" disabled>&#8250;</button>
+        <button type="button" disabled>&#187;</button>
         }
         if (Model.ShowPageSizes)
         {
