Code base clean up
- Cleaned up code base.

--- a/Mvc.Grid.Web/Views/Home/DataTable.cshtml
+++ b/Mvc.Grid.Web/Views/Home/DataTable.cshtml
@@ -14,13 +14,12 @@
             .Grid(Model.Rows.Cast<DataRow>())
             .Build(columns =>
             {
-                columns.Add(model => model["Name"] as String).Filterable(true).Sortable(true).Named("name").Titled("Name");
-                columns.Add(model => model["Surname"] as String).Filterable(true).Sortable(true).Named("surname").Titled("Surname");
-                columns.Add(model => model["MaritalStatus"] as String).Filterable(true).Sortable(true).Named("marital-status").Titled("Marital status");
+                foreach (DataColumn? column in Model.Columns)
+                {
+                    String name = column!.ColumnName;
 
-                columns.Add(model => model["Age"] as String).Filterable(true).Sortable(true).Named("age").Titled("Age");
-                columns.Add(model => model["Birthday"] as String).Filterable(true).Sortable(true).Named("birthday").Titled("Birthday");
-                columns.Add(model => model["IsWorking"] as String).Filterable(true).Sortable(true).Named("is-working").Titled("Is working");
+                    columns.Add(model => model[name] as String).Filterable(true).Sortable(true).Named(name).Titled(column.Caption);
+                }
             })
             .Empty("No data found")
             .Pageable(pager =>
@@ -45,13 +44,12 @@
     .Grid(Model.Rows.Cast<DataRow>())
     .Build(columns =>
     {
-        columns.Add(model => model[<span class="str">"Name"</span>] <span class="kwd">as</span> <span class="cls">String</span>).Filterable(<span class="kwd">true</span>).Sortable(<span class="kwd">true</span>).Named(<span class="str">"name"</span>).Titled(<span class="str">"Name"</span>);
-        columns.Add(model => model[<span class="str">"Surname"</span>] <span class="kwd">as</span> <span class="cls">String</span>).Filterable(<span class="kwd">true</span>).Sortable(<span class="kwd">true</span>).Named(<span class="str">"surname"</span>).Titled(<span class="str">"Surname"</span>);
-        columns.Add(model => model[<span class="str">"MaritalStatus"</span>] <span class="kwd">as</span> <span class="cls">String</span>).Filterable(<span class="kwd">true</span>).Sortable(<span class="kwd">true</span>).Named(<span class="str">"marital-status"</span>).Titled(<span class="str">"Marital status"</span>);
+        foreach (<span class="cls">DataColumn</span>? column <span class="kwd">in</span> Model.Columns)
+        {
+            <span class="cls">String</span> name = column!.ColumnName;
 
-        columns.Add(model => model[<span class="str">"Age"</span>] <span class="kwd">as</span> <span class="cls">String</span>).Filterable(<span class="kwd">true</span>).Sortable(<span class="kwd">true</span>).Named(<span class="str">"age"</span>).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model[<span class="str">"Birthday"</span>] <span class="kwd">as</span> <span class="cls">String</span>).Filterable(<span class="kwd">true</span>).Sortable(<span class="kwd">true</span>).Named(<span class="str">"birthday"</span>).Titled(<span class="str">"Birthday"</span>);
-        columns.Add(model => model[<span class="str">"IsWorking"</span>] <span class="kwd">as</span> <span class="cls">String</span>).Filterable(<span class="kwd">true</span>).Sortable(<span class="kwd">true</span>).Named(<span class="str">"is-working"</span>).Titled(<span class="str">"Is working"</span>);
+            columns.Add(model => model[name] as <span class="cls">String</span>).Filterable(<span class="kwd">true</span>).Sortable(<span class="kwd">true</span>).Named(name).Titled(column.Caption);
+        }
     })
     .Empty(<span class="str">"No data found"</span>)
     .Pageable(pager =>
