--- a/Mvc.Grid.Web/Views/Home/Filtering.cshtml
+++ b/Mvc.Grid.Web/Views/Home/Filtering.cshtml
@@ -61,7 +61,7 @@
         });
     })
     .Empty(<span class="str">"No data found"</span>)
-    .Filterable() <span class="com">// Enables single filtering for not explicitly configured columns.</span>
+    .Filterable() <span class="com">// Enables single filtering for not explicitly configured property expression columns.</span>
 )
 </code>
 </pre>
