--- a/Mvc.Grid.Web/Views/Home/_NestedPersonGrid.cshtml
+++ b/Mvc.Grid.Web/Views/Home/_NestedPersonGrid.cshtml
@@ -3,12 +3,12 @@
 <div class="mvc-grid">
     <table>
         <thead>
-            <tr>
+            <tr class="mvc-grid-headers">
                 @foreach (IGridColumn column in Model.Columns)
                 {
-                    <th>
+                    <th@(column.AsAttributes())>
                         <span class="mvc-grid-title">@column.Title</span>
-                    </th>
+                    </th@>
                 }
             </tr>
         </thead>
